remove premature mention of alloc_nothrow

--- a/README.org
+++ b/README.org
@@ -3,8 +3,8 @@
 :END:
 * Bumper.jl
 
-Bumper.jl is an experimental package that aims to make working with bump allocators easy and safer (when used right; alloc_nothrow
-is less safe). You can dynamically allocate memory to these bump allocators, and reset them at the end of a code block, just like
+Bumper.jl is an experimental package that aims to make working with bump allocators easy and safer (when used right).
+You can dynamically allocate memory to these bump allocators, and reset them at the end of a code block, just like
 Julia's default stack. Allocating to the a =AllocBuffer= with Bumper.jl can be just as efficient as stack allocation.
 
 The point of this is to not have to pay the hefty cost of intermediate allocations. Bumper.jl has a global default buffer,
