--- a/README.org
+++ b/README.org
@@ -7,19 +7,19 @@ Bumper.jl is an experimental package that aims to make working with bump allocat
 You can dynamically allocate memory to these bump allocators, and reset them at the end of a code block, just like
 Julia's default stack. Allocating to the a =AllocBuffer= with Bumper.jl can be just as efficient as stack allocation.
 
-The point of this is to not have to pay the hefty cost of intermediate allocations. Bumper.jl has a global default buffer,
-which starts off with =1MB= of capacity. 
+The point of this is to not have to pay the hefty cost of intermediate allocations.
 
-#+begin_src julia
-using Bumper
-using StrideArrays # Not necessary, but makes operations like broadcasting with Bumpers.jl faster.
-
-# Some people might get some errors during precompilation when doing `using StrideArrays` related
-# to Octavian.jl, you might have to do Pkg.add("Octavian@0.3.17")
-#+end_src
+Bumper.jl has a global default buffer, which starts off with =1MB= of capacity. You can change the default buffer size with =set_default_buffer_size!(nbytes)= where =nbytes= is the new size of the default buffer. If the default buffer (or any
+other buffer backed by a =Vector=) runs out of memory, it'll print a warning and then automatically resize the buffer
+to accomodate the request. If you don't want to be warned about this, run =Bumper.warn_when_resizing_buffer() = false=.
 
 Now we're ready to use it. The simplest way to use Bumper is to rely on its default buffer implicitly like so:
 #+begin_src julia
+using Bumper
+using StrideArrays # Not necessary, but makes operations like broadcasting with Bumpers.jl faster.
+# Some people might get some errors during precompilation when doing `using StrideArrays` related
+# to Octavian.jl, you might have to do Pkg.add("Octavian@0.3.17")
+
 function f(x::Vector{Int})
     @no_escape begin
         y = alloc(Int, length(x)) # This will allocate a `PtrArray` from StrideArraysCore.jl using memory from the default buffer.
@@ -116,9 +116,6 @@ Running =default_buffer()= will give you the current task's default buffer, or y
 
 
 Some miscellaneous notes:
-+ You can change the default buffer size with =set_default_buffer_size!(nbytes)= where =nbytes= is the new size of the default buffer.
-+ If the default buffer (or any other buffer backed by a =Vector=) runs out of memory, it'll print a warning and then automatically
-  resize the buffer to accomodate the request. If you don't want to be warned about this, run =Bumper.warn_when_resizing_buffer() = false=.
 + =@no_escape= blocks can be nested as much as you want (so long as the allocator has enough memory to store the objects you're using.
 + =alloc(T, n...)= is dynamically scoped, meaning that you can have deeply nested =alloc= calls inside a =@no_escape= block, and they'll
   still use the same default buffer, and be reset once the block ends.
@@ -127,8 +124,8 @@ Some miscellaneous notes:
 + You can use =alloc= outside of an =@no_escape= block, but that will leak memory from the buffer and cause it to overflow if you do it to many times.
   If you accidentally do this, and need to reset the buffer, use =Bumper.reset_buffer!(::AllocBuffer)=.
 + =alloc(T, n...)= creates a =StrideArraysCore.PtrArray{T, length(n)}=.
-+ Bumper only depends on StrideArraysCore.jl, not the full StrideArrays, so if you need some of the more advanced
-  functionality from =StrideArrays.jl= itself, you'll need to do =using StrideArrays= separately.
++ In order to be lightweight, Bumper.jl only depends on StrideArraysCore.jl, not the full [[https://github.com/JuliaSIMD/StrideArrays.jl][StrideArrays.jl]], so if you need some of
+  the more advanced functionality from StrideArrays.jl itself, you'll need to do =using StrideArrays= separately.
 + Bumper.jl is experimental, and may have bugs. Let me know if you find any. Contributing to the test suite would be greatly appreciated.
 
 ** Concurrency and parallelism
