--- a/README.org
+++ b/README.org
@@ -9,11 +9,12 @@ Julia's default stack. Allocating to the a =AllocBuffer= with Bumper.jl can be j
 
 The point of this is to not have to pay the hefty cost of intermediate allocations.
 
-Bumper.jl has a global default buffer, which starts off with =1MB= of capacity. You can change the default buffer size with =set_default_buffer_size!(nbytes)= where =nbytes= is the new size of the default buffer. If the default buffer (or any
-other buffer backed by a =Vector=) runs out of memory, it'll print a warning and then automatically resize the buffer
-to accomodate the request. If you don't want to be warned about this, run =Bumper.warn_when_resizing_buffer() = false=.
+Bumper.jl has a global default buffer, which starts off with =1MB= of capacity. You can change the default buffer size
+with =set_default_buffer_size!(nbytes)= where =nbytes= is the new size of the default buffer. If a buffer runs out of
+memory, it'll throw an error. Resizing a buffer which is in active use is not allowed, and should be
+considered memory un-safe. 
 
-Now we're ready to use it. The simplest way to use Bumper is to rely on its default buffer implicitly like so:
+The simplest way to use Bumper is to rely on its default buffer implicitly like so:
 #+begin_src julia
 using Bumper
 using StrideArrays # Not necessary, but makes operations like broadcasting with Bumpers.jl faster.
@@ -31,7 +32,9 @@ end
 f([1,2,3])
 #+end_src
 
+#+RESULTS:
 : 9
+
 
 When you use =@no_escape=, you are promising that any code enclosed in the supplied code block will not leak any memory
 created by =alloc=. That is, you are *only* allowed to do intermediate =alloc= allocations inside a =@no_escape= block,
@@ -114,6 +117,15 @@ end
 
 Running =default_buffer()= will give you the current task's default buffer, or you can explicitly construct an =N= byte buffer by calling =AllocBuffer(N)=.
 
+E.g. if we want to do something that requires a very large buffer temporarily, we could do this:
+#+begin_src julia
+let x = rand(1:100, 10_000_000), buf = AllocBuffer(2*sizeof(x))
+    f(x, buf)
+end
+#+end_src
+
+: 515035101
+
 
 Some miscellaneous notes:
 + =@no_escape= blocks can be nested as much as you want (so long as the allocator has enough memory to store the objects you're using.
@@ -143,6 +155,7 @@ end
 
 : false
 
+
 Whereas if we don't spawn any tasks, we don't have to worry about unnecessary buffer creation:
 
 #+begin_src julia
@@ -170,6 +183,7 @@ end
 #+end_src
 
 : false
+
 
 This is dynamically scoped, so any nested function calls inside the =with_buffer= block will see a modified =default_buffer=.
 
